# nrf5340_sysbuild

./: CMakeLists.txt  Kconfig.sysbuild  README.md  prj.conf  sysbuild.cmake
net_core/: CMakeLists.txt  prj.conf
net_core/src/: main.c
src/: main.c
